--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.eisenhower-matrix img {
+.matrix-img {
   width: 100%;
 }
-.eisenhower-matrix .more-inf {
+.more-inf {
   font-family: fantasy, cursive;
 }
 
@@ -36,19 +36,19 @@ body {
 .task-row-wrapper {
   display: flex;
 }
-ul {
+.task-list {
   margin: 0;
   padding: 0px;
 }
-li,
-h3 {
+.list-name,
+.list-elem {
   list-style:none;
 }
-input,
-button {
+.input-field,
+.push-button {
   outline: none;
 }
-button {
+.push-button {
   background: none;
   border: 0px;
   color: #888;
@@ -57,12 +57,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.push-button:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.list-name,
+.normal-label[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -71,7 +71,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input-field[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -83,21 +83,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input-field[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.normal-label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.input-field#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list-elem {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -105,47 +105,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.list-elem > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list-elem > .input-field[type="checkbox"] {
   margin: 0 10px;
 }
-li > label {
+.list-elem > .normal-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+.list-elem > .input-field[type="text"] {
   width: 226px;
 }
-button.delete img {
+.delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.task-list#completed-tasks .normal-label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list .list-elem .input-field[type=text] {
   display: none;
 }
 
-ul li.edit-mode input[type=text] {
+.task-list .list-elem.edit-mode .input-field[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.edit-mode label {
+.task-list .list-elem.edit-mode .normal-label {
   display: none;
 }
